crates/datarig-tui/tests/snapshots/ui_snapshots__profile_form_source_command_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ○ ×                                                                                                        "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│    ▸ analytics                       ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│    ▸ public                          ││  3                                                                                                                   │"
"│    ▸ shop                            ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│▸ ○   分析-replica                    ││  5 FROM shop.orders o                                                                                                │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│▸ ○   分析-replica                    ││  6 JOIN shop.users u ON u.id = o.user_id                                                                             │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                                      ││  7 WHERE o.status = 'paid';                                                                                          │"
"│                                      ││  8                                                                                                                   │"
"│                                      ││  9 SELECT * FROM analytics.events;                                                                                   │"
"│                             ╭ New connection ──────────────────────────────────────────────────────────────────────────────────╮                             │"
"│                             │  Basic   SSH   Advanced                                                    Ctrl+N/Ctrl+P section │                             │"
"│                             │                                                                                                  │                             │"
"│                             │ Driver            ‹PostgreSQL› MySQL  Redis  Elasticsearch   not yet supported                   │                             │"
"│                             │ Name              prod                                                                           │                             │"
"│                             │ Host              localhost                                                                      │                             │"
"│                             │ Port              5432                                                                           │                             │"
"│                             │ User                                                                                             │                             │"
"│                             │ Password storage   Keychain  File ‹Command› Env  Prompt   ←/→ change                             │                             │"
"│                             │ Command           p read op://work/prod-db/password   stdout is used · no shell                  │                             │"
"│                             │ Database                                                                                         │                             │"
"│                             │                                                                                                  │                             │"
"│                             │ DSN               postgres://localhost:5432/?sslmode=prefer                                      │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                    Test    Save    Cancel                                                        │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             ╰───────────────────────── Tab/↑↓ move · Ctrl+N/P section · Ctrl+T test · Ctrl+S save · Esc cancel ╯                             │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                                                                                                  EN "
